# tlsn-infra

./: .gitignore  CLAUDE.md  README.md
docs/: bringid-app-specific-nullifiers.md  bringid-key-recovery.md  credential_groups_and_default_scores.md  migration-guide-v2.md  uber_extension_prompt.md  verifier-api.md
notary/: Dockerfile  Makefile  config.dev.yaml  config.yaml  eckey.dev.pem  whitelist.dev.csv
proxy/: Dockerfile  Makefile  config  requirements.txt  start.sh
verifier/: .env.dev  API.md  Cargo.toml  README.md  oauth_signers.json  oauth_signers_staging.json  oauth_verifications.json  oauth_verifications_staging.json  verifications.json
verifier/src/: config.rs  core.rs  custom_handlers.rs  helpers.rs  main.rs  server.rs  services.rs  signer.rs  telemetry.rs  tlsn.rs
verifier/src/core/: oauth_verification.rs  verification.rs
verifier/src/core/verification/: check.rs  presentation_check.rs  window.rs
verifier/src/custom_handlers/: apple_devices_user_id.rs  apple_subs_user_id.rs  uber_rides_amount.rs
verifier/src/helpers/: credential_id.rs  error.rs  oauth_signer.rs  registry.rs  user_id_hash.rs  verifier_response.rs
verifier/src/server/: worker.rs
verifier/src/server/handlers/: verify.rs
verifier/src/services/: handlers_manager.rs  server.rs  verification_manager.rs
verifier/src/services/handlers_manager/: manager.rs
verifier/src/services/server/: handlers.rs  worker.rs
verifier/src/services/server/handlers/: root.rs  verify.rs  verify_oauth.rs  verify_tlsn.rs
verifier/src/services/verification_manager/: oauth_worker.rs  worker.rs
(+1 files in other folders)
