[package]
name = "verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.219", features = ["derive"] }

tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", package = "tlsn-core" }
bincode = "1.3.3"
hex = "0.4.3"
alloy = "1.0.12"
dotenv = "0.15.0"
rand = "0.9.1"
